building app after transfering all files

--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -10,3 +10,10 @@
   align-content: start;
   gap: 1.6rem;
 }
+* {
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  background: transparent; /* make scrollbar transparent */
+}
